fixed response data after bet